--- a/index.html
+++ b/index.html
@@ -36,6 +36,76 @@
                 </div>
             </div>
         </section>
+        <section class="other-amount-section">
+            <div class="other-amount">
+                <h3 class="other-taka">Other Amount (Taka)</h3>
+                <hr class="other-hr">
+                <button class="btn-primary">Donate Now</button>
+            </div>
+        </section>
+        <!-- our donation plan -->
+        <section class="our-donation-section">
+            <div class="our-donation">
+                <h1 class="donated-titel">Our Donate Plan</h1>
+                <p class="donate-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            </div>
+        </section>
+        <!-- food family section -->
+        <section class="family">
+            <div class="our-family">
+                <div class="food">
+                    <a href=""><i class="fa-solid fa-ice-cream icon"></i></a>
+                    <h3 class="food-titel">Food for a family</h3>
+                    <p class="food-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="food-family">
+                    <a href=""><i class="fa-solid fa-house-user icon"></i></a>
+                    <h3 class="food-titel">Shelter for a family</h3>
+                    <p class="food-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="education">
+                    <a href=""><i class="fa-solid fa-book-open-reader icon"></i></a>
+                    <h3 class="food-titel">Education for a child</h3>
+                    <p class="food-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+            </div>
+        </section>
+        <!-- their lives depends -->
+        <section class="lives-section">
+                <div class="lives-depends">
+                <div class="lives-content">
+                <h1 class="lives-titel">Their lives depend on your donation.</h1>
+                <p class="lives-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                <p class="lives-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+                <button class="primary">How to Contribute?</button>
+                </div>
+                <div class="img">
+                <img src="images/donation8.jpg" alt="">
+               </div>
+             </div>
+        </section>
+        <section class="lives-section">
+            <div class="need-servive">
+            <div class="second-img">
+            <img src="images/donation9.jpg" alt="">
+            </div>
+            <div class="servive-content">
+            <h1 class="lives-titel">They need us to suvive.</h1>
+            <p class="servive-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <p class="servive-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+            <button class="primary">How to Contribute?</button>
+            </div>
+         </div>
+    </section>
+        <!-- get my updates -->
+        <section class="our-donation-section">
+            <div class="our-donation">
+                <h1 class="donated-titel">Get my Update</h1>
+                <p class="donate-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            </div>
+        </section>
+        <!-- email section -->
+        
     </main>
 </body>
 </html>
